--- a/index.html
+++ b/index.html
@@ -3,12 +3,53 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="U.S, Traveling, Yosemite Valley, Lake Louise, Bald Mountains, Latemar, Vanoise National Park lago Di Braies "
+    />
+    <meta
+      name="description"
+      content="Traveling some beautiful places in the U.S"
+    />
+    <link rel="shortcut icon" href="favicon.ico" />
     <link href="./pages/index.css" rel="stylesheet" />
     <title>Around the U.S</title>
   </head>
-  <body>
-    <main>
-      <p class="page">Hello</p>
-    </main>
+  <body class="page">
+    <div class="page__content">
+      <header class="header page__section">
+        <img
+          src="./images/logo.svg"
+          alt="Around the U.S logo"
+          class="header__image"
+        />
+      </header>
+      <main class="content">
+        <section class="profile page__section">
+          <img
+            src="./images/jacques-cousteau.png"
+            alt="Avatar images"
+            class="profile__image"
+          />
+          <div class="profile__info">
+            <h1 class="profile__title">Jacques Cousteau</h1>
+            <button class="profile__edit-button"></button>
+            <p class="profile__description">Explorer</p>
+          </div>
+          <button class="profile__add-button"></button>
+        </section>
+        <section class="cards">
+          <ul class="card__list">
+            <li class="card">
+              <img src="./images/lake-louise.jpg" class="card__image" />
+              <div class="card__description">
+                <h2>Lake Louise</h2>
+                <button class="card__like-button"></button>
+              </div>
+            </li>
+          </ul>
+        </section>
+      </main>
+    </div>
   </body>
 </html>
