Enter cards and Needs Adaptive media quaries

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <main class="content">
         <section class="profile page__section">
           <img
-            src="./images/jacques-cousteau.png"
+            src="./images/jacques-cousteau.jpg"
             alt="Avatar images"
             class="profile__image"
           />
@@ -38,18 +38,80 @@
           </div>
           <button class="profile__add-button"></button>
         </section>
-        <section class="cards">
+        <section class="cards page__section">
           <ul class="card__list">
             <li class="card">
-              <img src="./images/lake-louise.jpg" class="card__image" />
+              <img
+                src="./images/yosemite.jpg"
+                alt="Yosemite img"
+                class="card__image"
+              />
               <div class="card__description">
-                <h2>Lake Louise</h2>
+                <h2 class="card__title">Yosemite Valley</h2>
+                <button class="card__like-button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/lake-louise.jpg"
+                alt="Lake Louise Img"
+                class="card__image"
+              />
+              <div class="card__description">
+                <h2 class="card__title">Lake Louise</h2>
+                <button class="card__like-button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/bald-mountains.jpg"
+                alt="Bald Mountain image"
+                class="card__image"
+              />
+              <div class="card__description">
+                <h2 class="card__title">Bald Mountains</h2>
+                <button class="card__like-button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/latemar.jpg"
+                alt="Latemar image"
+                class="card__image"
+              />
+              <div class="card__description">
+                <h2 class="card__title">Latemar</h2>
+                <button class="card__like-button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/vanoise.jpg"
+                alt="Vanoise National Park image"
+                class="card__image"
+              />
+              <div class="card__description">
+                <h2 class="card__title">Vanoise National Park</h2>
+                <button class="card__like-button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/lago.jpg"
+                alt="Lago di Braies image"
+                class="card__image"
+              />
+              <div class="card__description">
+                <h2 class="card__title">Lago di Braies</h2>
                 <button class="card__like-button"></button>
               </div>
             </li>
           </ul>
         </section>
       </main>
+      <footer class="footer page__section">
+        <p class="footer__copyright">&copy; 2022 Around The U.S</p>
+      </footer>
     </div>
   </body>
 </html>
