Enter media quaries submittion 1

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img
           src="./images/logo.svg"
           alt="Around the U.S logo"
-          class="header__image"
+          class="header__logo"
         />
       </header>
       <main class="content">
