--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <button class="profile__add-button"></button>
         </section>
         <section class="cards page__section">
-          <ul class="card__list">
+          <ul class="card__gallery">
             <li class="card">
               <img
                 src="./images/yosemite.jpg"
