--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
           </div>
           <button class="profile__add-button"></button>
         </section>
+
         <section class="cards page__section">
-          <ul class="card__gallery">
+          <ul class="cards__gallery">
             <li class="card">
               <img
                 src="./images/yosemite.jpg"
