--- a/index.html
+++ b/index.html
@@ -33,10 +33,18 @@
           />
           <div class="profile__info">
             <h1 class="profile__title">Jacques Cousteau</h1>
-            <button class="profile__edit-button"></button>
+            <button
+              class="profile__edit-button"
+              aria-label="edit"
+              type="button"
+            ></button>
             <p class="profile__description">Explorer</p>
           </div>
-          <button class="profile__add-button"></button>
+          <button
+            class="profile__add-button"
+            aria-label="add"
+            type="button"
+          ></button>
         </section>
 
         <section class="cards page__section">
