--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Yosemite Valley</h2>
-                <button class="card__like-button"></button>
+                <button
+                  class="card__like-button"
+                  aria-label="like"
+                  type="button"
+                ></button>
               </div>
             </li>
             <li class="card">
@@ -68,7 +72,11 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Lake Louise</h2>
-                <button class="card__like-button"></button>
+                <button
+                  class="card__like-button"
+                  aria-label="like"
+                  type="button"
+                ></button>
               </div>
             </li>
             <li class="card">
@@ -79,7 +87,11 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Bald Mountains</h2>
-                <button class="card__like-button"></button>
+                <button
+                  class="card__like-button"
+                  aria-label="like"
+                  type="button"
+                ></button>
               </div>
             </li>
             <li class="card">
@@ -90,7 +102,11 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Latemar</h2>
-                <button class="card__like-button"></button>
+                <button
+                  class="card__like-button"
+                  aria-label="like"
+                  type="button"
+                ></button>
               </div>
             </li>
             <li class="card">
@@ -101,7 +117,11 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Vanoise National Park</h2>
-                <button class="card__like-button"></button>
+                <button
+                  class="card__like-button"
+                  aria-label="like"
+                  type="button"
+                ></button>
               </div>
             </li>
             <li class="card">
@@ -112,7 +132,11 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Lago di Braies</h2>
-                <button class="card__like-button"></button>
+                <button
+                  class="card__like-button"
+                  aria-label="like"
+                  type="button"
+                ></button>
               </div>
             </li>
           </ul>
