--- a/index.html
+++ b/index.html
@@ -146,6 +146,27 @@
         <p class="footer__copyright">&copy; 2022 Around The U.S</p>
       </footer>
     </div>
+    <div class="modal">
+      <div class="modal__container">
+        <button class="modal__close"></button>
+        <p class="modal__heading">Edit profile</p>
+        <form class="modal__form">
+          <input
+            type="text"
+            name="title"
+            placeholder="Jacques Cousteau"
+            class="modal__title"
+          />
+          <input
+            type="text"
+            name="description"
+            placeholder="Explorer"
+            class="modal__description"
+          />
+          <button class="modal__button">Save</button>
+        </form>
+      </div>
+    </div>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
