--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
               class="profile__edit-button"
               aria-label="edit"
               type="button"
+              id="profile-edit-button"
             ></button>
             <p class="profile__description">Explorer</p>
           </div>
@@ -146,9 +147,9 @@
         <p class="footer__copyright">&copy; 2022 Around The U.S</p>
       </footer>
     </div>
-    <div class="modal">
+    <div class="modal" id="profile-edit-modal">
       <div class="modal__container">
-        <button class="modal__close"></button>
+        <button class="modal__close" id="profile-close-modal"></button>
         <p class="modal__heading">Edit profile</p>
         <form class="modal__form">
           <input
