Entered modal fix border-box'
git clear
clear

clear

--- a/index.html
+++ b/index.html
@@ -32,14 +32,16 @@
             class="profile__image"
           />
           <div class="profile__info">
-            <h1 class="profile__title">Jacques Cousteau</h1>
+            <h1 class="profile__title" id="profile-title">Jacques Cousteau</h1>
             <button
               class="profile__edit-button"
               aria-label="edit"
               type="button"
               id="profile-edit-button"
             ></button>
-            <p class="profile__description">Explorer</p>
+            <p class="profile__description" id="profile-description">
+              Explorer
+            </p>
           </div>
           <button
             class="profile__add-button"
@@ -157,12 +159,14 @@
             name="title"
             placeholder="Jacques Cousteau"
             class="modal__title"
+            id="profile-title-input"
           />
           <input
             type="text"
             name="description"
             placeholder="Explorer"
             class="modal__description"
+            id="profile-description-input"
           />
           <button class="modal__button">Save</button>
         </form>
