--- a/index.html
+++ b/index.html
@@ -59,24 +59,30 @@
     </div>
     <div class="modal" id="profile-edit-modal">
       <div class="modal__container">
-        <button class="modal__close" id="profile-close-modal"></button>
-        <p class="modal__heading">Edit profile</p>
+        <button
+          class="modal__close"
+          type="submit"
+          id="profile-close-modal"
+        ></button>
+        <h2 class="modal__heading">Edit profile</h2>
         <form class="modal__form">
           <input
             type="text"
             name="title"
-            placeholder="Jacques Cousteau"
-            class="modal__title"
+            placeholder="Name"
+            class="modal__input"
             id="profile-title-input"
+            required
           />
           <input
             type="text"
             name="description"
-            placeholder="Explorer"
-            class="modal__description"
+            placeholder="About"
+            class="modal__input"
             id="profile-description-input"
+            required
           />
-          <button class="modal__button">Save</button>
+          <button class="modal__button" type="submit">Save</button>
         </form>
       </div>
     </div>
@@ -92,6 +98,6 @@
           ></button>
         </div></li
     ></template>
-    <script src="./scripts/index.js"></script>
+    <script src="./scripts/index.js" defer></script>
   </body>
 </html>
