--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="modal__container">
         <button
           class="modal__close"
-          type="close"
+          type="button"
           id="profile-close-modal"
         ></button>
         <h2 class="modal__heading">Edit profile</h2>
