--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <p class="footer__copyright">&copy; 2022 Around The U.S</p>
       </footer>
     </div>
+    <!-- Edit modal-->
     <div class="modal" id="profile-edit-modal">
       <div class="modal__container">
         <button
@@ -83,6 +84,36 @@
             required
           />
           <button class="modal__button" type="submit">Save</button>
+        </form>
+      </div>
+    </div>
+    <!--Add card modal-->
+    <div class="modal" id="profile-edit-modal">
+      <div class="modal__container">
+        <button
+          class="modal__close"
+          type="button"
+          id="profile-close-modal"
+        ></button>
+        <h2 class="modal__heading">New place</h2>
+        <form class="modal__form" id="add-card-form">
+          <input
+            type="text"
+            name="title"
+            placeholder="Title"
+            class="modal__input modal__input_type_title"
+            id="add-card-input"
+            required
+          />
+          <input
+            type="text"
+            name="url"
+            placeholder="Image Link"
+            class="modal__input modal__input_type_url"
+            id="add-url-input"
+            required
+          />
+          <button class="modal__button" type="submit">Create</button>
         </form>
       </div>
     </div>
