--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             class="profile__add-button"
             aria-label="add"
             type="button"
+            id="profile-add-button"
           ></button>
         </section>
         <section class="cards page__section">
@@ -88,12 +89,12 @@
       </div>
     </div>
     <!--Add card modal-->
-    <div class="modal" id="profile-edit-modal">
+    <div class="modal" id="add-card-modal">
       <div class="modal__container">
         <button
           class="modal__close"
           type="button"
-          id="profile-close-modal"
+          id="profile-card-close-modal"
         ></button>
         <h2 class="modal__heading">New place</h2>
         <form class="modal__form" id="add-card-form">
@@ -110,7 +111,7 @@
             name="url"
             placeholder="Image Link"
             class="modal__input modal__input_type_url"
-            id="add-url-input"
+            id="add-card-url-input"
             required
           />
           <button class="modal__button" type="submit">Create</button>
