--- a/index.html
+++ b/index.html
@@ -102,16 +102,16 @@
             type="text"
             name="title"
             placeholder="Title"
-            class="modal__input modal__input_type_title"
-            id="add-card-input"
+            class="modal__input"
+            id="card-title-input"
             required
           />
           <input
             type="text"
             name="url"
             placeholder="Image Link"
-            class="modal__input modal__input_type_url"
-            id="add-card-url-input"
+            class="modal__input"
+            id="card-url-input"
             required
           />
           <button class="modal__button" type="submit">Create</button>
