Feat/Trash button functionality

--- a/index.html
+++ b/index.html
@@ -124,6 +124,11 @@
         <div class="card__description">
           <h2 class="card__title"></h2>
           <button
+            class="card__trash-button"
+            aria-label="delete"
+            type="button"
+          ></button>
+          <button
             class="card__like-button"
             aria-label="like"
             type="button"
