Feat/preview popup functionality

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           type="button"
           id="preview__image-close-modal"
         ></button>
-        <img src="" alt="" class="preview__image" />
+        <img src="" alt="" class="modal__preview-image" />
         <h2 class="modal__preview-title"></h2>
       </div>
     </div>
