mobile resolution preview modal

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <div class="modal" id="preview__image-modal">
       <div class="preview__modal-container">
         <button
-          class="modal__close"
+          class="preview__modal-close-button"
           type="button"
           id="preview__image-close-modal"
         ></button>
