fixed BEM error/commited to DRY in css

--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
     </div>
     <!--Modal Preview-->
     <div class="modal" id="preview__image-modal">
-      <div class="preview__modal-container">
+      <div class="modal__preview-container">
         <button
-          class="preview__modal-close-button"
+          class="modal__close modal__preview-close-button"
           type="button"
           id="preview__image-close-modal"
         ></button>
