--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             minlength="2"
             maxlength="40"
           />
-          <span class="modal__error"></span>
+          <span class="modal__error" id="profile-title-input-error"></span>
           <input
             type="text"
             name="description"
@@ -89,8 +89,17 @@
             minlength="2"
             maxlength="200"
           />
-          <span class="modal__error"></span>
-          <button class="modal__button" type="submit">Save</button>
+          <span
+            class="modal__error"
+            id="profile-description-input-error"
+          ></span>
+          <button
+            class="modal__button modal__button_disabled"
+            type="submit"
+            disabled
+          >
+            Save
+          </button>
         </form>
       </div>
     </div>
@@ -112,19 +121,27 @@
             class="modal__input"
             id="card-title-input"
             required
+            minlength="1"
+            maxlength="30"
           />
 
-          <span class="modal__error"></span>
+          <span class="modal__error" id="card-title-input-error"></span>
           <input
-            type="text"
+            type="url"
             name="url"
             placeholder="Image Link"
             class="modal__input"
             id="card-url-input"
             required
           />
-          <span class="modal__error"></span>
-          <button class="modal__button" type="submit">Create</button>
+          <span class="modal__error" id="card-url-input-error"></span>
+          <button
+            class="modal__button modal__button_disabled"
+            type="submit"
+            disabled
+          >
+            Create
+          </button>
         </form>
       </div>
     </div>
