--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
           ></button>
         </div></li
     ></template>
-    <script src="./scripts/index.js" defer></script>
-    <script src="./scripts/validation.js" defer></script>
+    <script src="./pages/index.js" type="module" defer></script>
+    <!-- <script src="./components/validation.js" defer></script>
+    <script src="./components/Card.js" defer></script> -->
   </body>
 </html>
