--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         </div></li
     ></template>
     <script src="./pages/index.js" type="module" defer></script>
-    <script src="./components/validation.js" defer></script>
-    <script src="./components/Card.js" defer></script>
+    <!-- <script src="./components/validation.js" defer></script>
+    <script src="./components/Card.js" defer></script> -->
   </body>
 </html>
