Reviewer Errors fix

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           id="profile-close-modal"
         ></button>
         <h2 class="modal__heading">Edit profile</h2>
-        <form class="modal__form">
+        <form class="modal__form" id="edit-card-form">
           <input
             type="text"
             name="title"
