fix image bug submit for review

--- a/src/index.html
+++ b/src/index.html
@@ -117,7 +117,7 @@
         <form class="modal__form" id="add-card-form">
           <input
             type="text"
-            name="title"
+            name="name"
             placeholder="Title"
             class="modal__input"
             id="card-title-input"
@@ -129,7 +129,7 @@
           <span class="modal__error" id="card-title-input-error"></span>
           <input
             type="url"
-            name="url"
+            name="link"
             placeholder="Image Link"
             class="modal__input"
             id="card-url-input"
