--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
           id="profile-close-modal"
         ></button>
         <h2 class="modal__heading">Edit profile</h2>
-        <form class="modal__form" id="edit-card-form">
+        <form class="modal__form" name="editCardForm" id="edit-card-form">
           <input
             type="text"
             name="title"
@@ -94,13 +94,7 @@
             class="modal__error"
             id="profile-description-input-error"
           ></span>
-          <button
-            class="modal__button modal__button_disabled"
-            type="submit"
-            disabled
-          >
-            Save
-          </button>
+          <button class="modal__button" type="submit">Save</button>
         </form>
       </div>
     </div>
@@ -114,10 +108,10 @@
           aria-label="close"
         ></button>
         <h2 class="modal__heading">New place</h2>
-        <form class="modal__form" id="add-card-form">
+        <form class="modal__form" name="addCardForm" id="add-card-form">
           <input
             type="text"
-            name="name"
+            name="title"
             placeholder="Title"
             class="modal__input"
             id="card-title-input"
